--- a/assets/styles/pages/internal-news/internal-news-2.scss
+++ b/assets/styles/pages/internal-news/internal-news-2.scss
@@ -20,52 +20,51 @@
   *:first-child {
     margin-top: 0;
   }
-  .internal-news-2__block-text {
-    * {
-      margin-top: 20px;
-      @include default;
-      font-size: 16px;
-      text-transform: none;
-      line-height: 1.4em;
-    }
-    h1,
-    h2 {
-      @include h1;
-      font-size: 36px !important;
-    }
-    h3 {
-      @include h1;
-      font-size: 28px !important;
-    }
-    h4 {
-      @include h1;
-      font-size: 20px !important;
-    }
-    ol {
-      list-style-type: decimal;
-      list-style-position: inside;
-    }
 
-    ul {
-      list-style-type: disc;
-      list-style-position: inside;
-    }
+  * {
+    margin-top: 20px;
+    @include default;
+    font-size: 16px;
+    text-transform: none;
+    line-height: 1.4em;
+  }
+  h1,
+  h2 {
+    @include h1;
+    font-size: 36px !important;
+  }
+  h3 {
+    @include h1;
+    font-size: 28px !important;
+  }
+  h4 {
+    @include h1;
+    font-size: 20px !important;
+  }
+  ol {
+    list-style-type: decimal;
+    list-style-position: inside;
+  }
 
-    li {
-      p {
-        display: inline;
-      }
-    }
+  ul {
+    list-style-type: disc;
+    list-style-position: inside;
+  }
 
-    a:not(.internal-news-2__btn) {
-      text-decoration: underline;
+  li {
+    p {
+      display: inline;
     }
-    img,
-    video {
-      display: block;
-      max-width: 100%;
-      border-radius: 10px;
-    }
+  }
+
+  a:not(.internal-news-2__btn) {
+    text-decoration: underline;
+  }
+  img,
+  video {
+    display: block;
+    max-width: 100%;
+    border-radius: 10px;
   }
 }
 
